# pulseaudio-module-cmtspeech-n9xx

./: configure.ac
debian/: changelog  control  rules
rpm/: pulseaudio-module-cmtspeech-n9xx.changes  pulseaudio-module-cmtspeech-n9xx.spec  pulseaudio-module-cmtspeech-n9xx.yaml
src/: Makefile.am
src/cmtspeech/: Makefile.am  cmtspeech-connection.c  cmtspeech-mainloop-handler.c  cmtspeech-sink-input.c  cmtspeech-source-output.c  module-meego-cmtspeech.c  module-meego-cmtspeech.h
